# GL4-Cat

./: CMakeLists.txt  README.md  install_deps.sh
.github/workflows/: build.yml  main.yml
include/tools/: sh_size.hpp
include/utils/: GManager.hpp
lib/SOIL2/share/soil2/: soil2-targets-release.cmake  soil2-targets.cmake
lib/glad-4.4/: glad.c
lib/glad-4.4/include/: glad.h
lib/glad-4.4/src/: glad.c
res/shaders/: fragment_core.glsl  vertex_core.glsl
src/: main.cpp
src/tools/: sh_size.cpp
src/utils/: GManager.cpp
